<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="DeviceActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_activity"
        android:gravity="center"
        android:textColor="@color/purple_700"
        android:textSize="35sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameOfDevice"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/naziv_uredjaja"
            android:textSize="20sp"
            android:layout_gravity="center"/>


        <TextView
            android:id="@+id/idOfDevice"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/id_uredjaja"
            android:textSize="20sp"
            android:layout_gravity="center"/>


        <TextView
            android:id="@+id/stateOfDevice"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/stanje_uredjaja"
            android:textSize="20sp"
            android:layout_gravity="center"/>


        <TextView
            android:id="@+id/typeOfDevice"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/tip_uredjaja_da"
            android:textSize="20sp"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>